[profile.release]
debug = true

[profile.bench]
debug = true

[workspace]
members = ["unwind"]

#[patch.crates-io]
#gimli = { git = 'https://github.com/roblabla/gimli.git?branch=lookup_and_parse' }
[replace]
"gimli:0.16.0" = { git = 'https://github.com/roblabla/gimli.git', branch = 'lookup_and_parse' }
