[package]
name = "unwind"
version = "0.1.0"
authors = ["main() <main@ehvag.de>"]

[dependencies]
gimli = "0.18"
libc = "0.2"
fallible-iterator = "0.1"
log = "0.4"
backtrace = "0.3.15"

[target."cfg(target_os = \"macos\")".dependencies]
findshlibs = "0.4.0"
object = "0.11.0"
memmap = "0.7.0"

[build-dependencies]
gcc = "0.3.52"

[dev-dependencies]
backtrace = "0.3"
env_logger = "0.6"

[features]
nightly = []
asm = ["nightly"]
