[package]
name = "unwind"
version = "0.1.0"
authors = ["main() <main@ehvag.de>"]
license = "MIT OR Apache-2.0"

[dependencies]
gimli = "0.18"
libc = "0.2"
fallible-iterator = "0.1"
log = "0.4"

[build-dependencies]
cc = "1.0.35"

[dev-dependencies]
backtrace = "0.3"
env_logger = "0.7"

[features]
nightly = []
asm = ["nightly"]
libunwind_shim = []
